# task-popper

./: AGENTS.md  CLAUDE.md  README.md  TICKETS.md  problem.md  pyproject.toml
docs/: architecture.md  data-model.md  future.md  how-to-do-tickets.md  keybindings.md
task_popper/: __main__.py  app.py  config.py  models.py  scheduler.py  screens.py  store.py  widgets.py
