[project]
name = "task-popper"
version = "0.1.0"
description = "Terminal task manager with criticality-based ranking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.3.0",
    "textual>=8.1.1",
]

[project.scripts]
task-popper = "task_popper.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
